fix title margin on mobile

--- a/assets/css/screen.scss
+++ b/assets/css/screen.scss
@@ -872,6 +872,7 @@ a.fn-item.active {
   }
 
   .blog-title {
+    margin-top: 2em;
     font-size: 4rem;
     letter-spacing: -1px;
   }
